# uxtest

./: .gitignore  Makefile  README.md  SPEC.md  pyproject.toml
.uxtest/: .gitignore  config.yaml
.uxtest/personas/: academic-researcher.yaml  conference-organizer.yaml  developer-builder.yaml  enterprise-insights-lead.yaml  enterprise-procurement-lead.yaml  enterprise-risk-reviewer.yaml  journalist-policy-analyst.yaml  low-confidence.yaml  mobile-first.yaml  price-sensitive.yaml  prospective-phd-student.yaml  research-collaborator.yaml  research-director.yaml  seniors.yaml  startup-founder.yaml  survey-ops-manager.yaml
docs/: index.html
examples/checkout_site/: server.py
examples/expectedparrot_site/: batch.yaml  content-comprehension.yaml  task-discovery.yaml
examples/jjh_site/: discovery.yaml  study-design.md
examples/merpay_site/: merpay-switch.yaml
examples/saas_site/: expected_flaws.yaml  regression.yaml  (+2 more)
tests/: test_agent_export.py  test_cli_agent_workflows.py  test_edsl_logging.py  test_figma.py  test_fixture_config.py  test_humanize_export.py  test_image_review.py  test_journey.py  test_runner.py  test_saliency.py  test_store.py
uxtest/: __init__.py  agent_export.py  analyze.py  animate.py  batch_report.py  browser.py  cli.py  comparison.py  decisions.py  eval.py  figma.py  fixture_config.py  fixtures.py  humanize_export.py  image_review.py  journey.py  log_report.py  models.py  narrative_report.py  package_resources.py  rendering.py  report.py  report_handoff.py  retention.py  runner.py  saliency.py  stop_quality.py  store.py  trace.py  uxr.py
(+54 files in other folders)
