[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uxtest"
version = "0.1.0"
description = "Synthetic-user UX studies against live web applications"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "edsl @ git+https://github.com/expectedparrot/edsl.git@2fea46d4a790730496dca86ab830a2491f81cb3f",
  "pillow>=10",
  "playwright>=1.40",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
uxtest = "uxtest.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["uxtest*"]

[tool.setuptools.package-data]
uxtest = ["resources/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
